# scout

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/agent/: agent.py  orchestrator_agent.py
app/models/: models.py
app/prompts/: prompts.py
app/services/: services.py
app/tools/: tool_registry.py
app/utils/: llm_utils.py
app/workflows/: agent.py  create_analysts.py  graph_builder.py  interview.py  research.py
templates/: index.html
